--- a/src/app/all-components/help-center-purchase-content/help-center-purchase-content.component.html
+++ b/src/app/all-components/help-center-purchase-content/help-center-purchase-content.component.html
@@ -46,7 +46,7 @@
     
   </div>
   <div class="portion">
-    <div class="payment_list_bar" [routerLink]="['/other']">
+    <div class="payment_list_bar" [routerLink]="['/other-account']">
       Other
       <ion-icon name="chevron-down-outline"></ion-icon>
     </div>
