--- a/src/app/all-components/footer/footer.component.html
+++ b/src/app/all-components/footer/footer.component.html
@@ -31,6 +31,8 @@ router.url === '/manage-account'  ||
 router.url === '/other-account'  ||
 router.url === '/raise-query'  ||
 router.url === '/product-status'  ||
+router.url === '/your-finance/overview'  ||
+router.url === '/your-finance/general-ledger'  ||
 router.url === '/register'; then blankfooter; else mainfooter">
 </ng-container>
 
