--- a/src/app/all-components/shop-contents/top-details/top-details.component.html
+++ b/src/app/all-components/shop-contents/top-details/top-details.component.html
@@ -1,7 +1,7 @@
 <div class="offer_notification">get free shipping on 5 order</div>
 <div class="filter_back">
   <ul class="details">
-    <li>
+    <li (click)="filter()">
       <img src="assets/images/filter_icon.png" alt="">
       filter
     </li>
