--- a/src/app/all-components/home-page-contents/top-brands/fav-details/fav-details.component.scss
+++ b/src/app/all-components/home-page-contents/top-brands/fav-details/fav-details.component.scss
@@ -113,10 +113,12 @@
 
  @media only screen and (max-width:411px){
     .main_details{ 
-        
-        h2{
-            right: -79px; font-size: 27px;
+        .details{
+            h2{
+                right: -157px !important; font-size: 27px;
+            }
         }
+        
         
     }
   
