--- a/src/app/all-components/profile-settings-content-details/profile-settings-content-details.component.html
+++ b/src/app/all-components/profile-settings-content-details/profile-settings-content-details.component.html
@@ -11,6 +11,10 @@
     <img src="assets/images/pro_icon.png" alt="">
     <ion-label>Account Settings<br><span>Address,Bank,Details,etc.</span></ion-label>
   </ion-item>
+  <ion-item lines="none" color="custom" [routerLink]="['/your-finance']" routerLinkActive="router-link-active" >
+    <img src="assets/images/pro_icon3.png" alt="">
+    <ion-label>Your Finance<br><span>Order overview & general Ledger</span></ion-label>
+  </ion-item>
   <ion-item lines="none" color="custom">
     <img src="assets/images/pro_icon2.png" alt="">
     <ion-label>Language Preference<br><span>Select a language.</span></ion-label>
