--- a/src/app/all-components/home-page-contents/best-deals/best-deals.component.html
+++ b/src/app/all-components/home-page-contents/best-deals/best-deals.component.html
@@ -3,19 +3,19 @@
 </div>
 <div class="product_slider">
   <ion-slides pager="false" [options]="slideOpts">
-    <ion-slide>
+    <ion-slide [routerLink]="['/shop']" routerLinkActive="router-link-active">
       <div class="portion">
         <img src="assets/images/h-p-s11.jpg" alt="">
         <ion-button fill="clear">Shop now</ion-button>
       </div>
     </ion-slide>
-    <ion-slide>
+    <ion-slide [routerLink]="['/shop']" routerLinkActive="router-link-active">
       <div class="portion">
         <img src="assets/images/h-p-s12.jpg" alt="">
         <ion-button fill="clear">Shop now</ion-button>
       </div>
     </ion-slide>
-    <ion-slide>
+    <ion-slide [routerLink]="['/shop']" routerLinkActive="router-link-active">
       <div class="portion">
         <img src="assets/images/h-p-s6.jpg" alt="">
         <ion-button fill="clear">Shop now</ion-button>
