--- a/src/app/all-components/home-page-contents/top-category/bottom-wear-details/bottom-wear-details.component.scss
+++ b/src/app/all-components/home-page-contents/top-category/bottom-wear-details/bottom-wear-details.component.scss
@@ -70,7 +70,7 @@
         .details{
             padding-left: 50px;
             h2{
-                right: -225px !important; top: -98px; font-size: 20px !important;     letter-spacing: 6px;
+                right: -147px !important; top: -98px; font-size: 20px !important;     letter-spacing: 6px;
             }
            
             li{
@@ -110,11 +110,11 @@
         
     }
  }
- @media only screen and (max-width:411px){
+ @media only screen and (max-width:414px){
     .main_details{ 
         .details{
             h2{
-                right: -201px !important; font-size: 27px;
+                right: -197px !important; font-size: 27px;
             }
         }
         
@@ -123,11 +123,11 @@
   
  }
 
- @media only screen and (max-width:400px){
+ @media only screen and (max-width:394px){
     .main_details{ 
         .details{
             h2{
-                right: -99px;
+                right: -214px !important;
             }
             
         }
