--- a/src/app/all-components/shop-contents/product-items/product-items.component.html
+++ b/src/app/all-components/shop-contents/product-items/product-items.component.html
@@ -38,7 +38,7 @@
         </ion-card>
       </ion-col>
       <ion-col size-lg="6" size-md="6" size-sm="6" size="6">
-        <ion-card>
+        <ion-card [routerLink]="['/shop-details']" routerLinkActive="router-link-active">
           <div class="image_back">
             <img src="assets/images/pro2.jpg" alt="">
             <div class="button_cover" [class.activelike]="activelike" (click)="active()">
@@ -74,7 +74,7 @@
         </ion-card>
       </ion-col>
       <ion-col size-lg="6" size-md="6" size-sm="6" size="6">
-        <ion-card>
+        <ion-card [routerLink]="['/shop-details']" routerLinkActive="router-link-active">
           <div class="image_back">
             <img src="assets/images/pro3.jpg" alt="">
             <div class="button_cover" [class.activelike]="activelike" (click)="active()">
@@ -110,7 +110,7 @@
         </ion-card>
       </ion-col>
       <ion-col size-lg="6" size-md="6" size-sm="6" size="6">
-        <ion-card>
+        <ion-card [routerLink]="['/shop-details']" routerLinkActive="router-link-active">
           <div class="image_back">
             <img src="assets/images/pro4.jpg" alt="">
             <div class="button_cover" [class.activelike]="activelike" (click)="active()">
