--- a/src/app/all-pages/your-orders/your-orders.page.html
+++ b/src/app/all-pages/your-orders/your-orders.page.html
@@ -10,7 +10,7 @@
         </ion-title>
         <ion-buttons slot="end">
           <ul class="right_icon_details cart_icon">
-            <li><img src="assets/images/cart.png" alt=""></li>          
+            <li [routerLink]="['/shop']"><img src="assets/images/cart.png" alt=""></li>          
           </ul>
         </ion-buttons>
       </ion-toolbar>
