--- a/src/app/all-components/help-center-purchase-content/help-center-purchase-content.component.scss
+++ b/src/app/all-components/help-center-purchase-content/help-center-purchase-content.component.scss
@@ -61,6 +61,9 @@
         h3{
             font-size: 13px; line-height: 22px;
         }
+        img{
+            height: 80px;
+        }
         
     }
 
