--- a/src/app/all-components/home-page-contents/ad-big/ad-big.component.html
+++ b/src/app/all-components/home-page-contents/ad-big/ad-big.component.html
@@ -1,3 +1,3 @@
-<div class="ad">
+<div class="ad" [routerLink]="['/shop']" routerLinkActive="router-link-active">
   <img src="assets/images/ad_big.jpg" alt="">
 </div>
