--- a/src/app/all-components/home-page-contents/category-brand-product/category-brand-product.component.html
+++ b/src/app/all-components/home-page-contents/category-brand-product/category-brand-product.component.html
@@ -4,19 +4,19 @@
 </div>
 <div class="product_slider">
   <ion-slides pager="false" [options]="slideOpts">
-    <ion-slide>
+    <ion-slide [routerLink]="['/shop']" routerLinkActive="router-link-active">
       <div class="portion">
         <img src="assets/images/h-p-s9.jpg" alt="">
         <ion-button fill="clear">Shop now</ion-button>
       </div>
     </ion-slide>
-    <ion-slide>
+    <ion-slide [routerLink]="['/shop']" routerLinkActive="router-link-active">
       <div class="portion">
         <img src="assets/images/h-p-s10.jpg" alt="">
         <ion-button fill="clear">Shop now</ion-button>
       </div>
     </ion-slide>
-    <ion-slide>
+    <ion-slide [routerLink]="['/shop']" routerLinkActive="router-link-active">
       <div class="portion">
         <img src="assets/images/h-p-s6.jpg" alt="">
         <ion-button fill="clear">Shop now</ion-button>
