--- a/src/app/all-components/home-page-contents/latest-checkout/latest-item/latest-item.component.html
+++ b/src/app/all-components/home-page-contents/latest-checkout/latest-item/latest-item.component.html
@@ -1,31 +1,31 @@
 <div class="product_slider shoped">
   <ion-slides pager="true" [options]="slideOpts">
-    <ion-slide>
+    <ion-slide [routerLink]="['/shop']" routerLinkActive="router-link-active">
       <div class="portion">
         <img src="assets/images/h-p-s4.jpg" alt="">
       </div>
     </ion-slide>
-    <ion-slide>
+    <ion-slide [routerLink]="['/shop']" routerLinkActive="router-link-active">
       <div class="portion">
         <img src="assets/images/h-p-s5.jpg" alt="">
       </div>
     </ion-slide>
-    <ion-slide>
+    <ion-slide [routerLink]="['/shop']" routerLinkActive="router-link-active">
       <div class="portion">
         <img src="assets/images/h-p-s6.jpg" alt="">
       </div>
     </ion-slide>
-    <ion-slide>
+    <ion-slide [routerLink]="['/shop']" routerLinkActive="router-link-active">
       <div class="portion">
         <img src="assets/images/h-p-s4.jpg" alt="">
       </div>
     </ion-slide>
-    <ion-slide>
+    <ion-slide [routerLink]="['/shop']" routerLinkActive="router-link-active">
       <div class="portion">
         <img src="assets/images/h-p-s5.jpg" alt="">
       </div>
     </ion-slide>
-    <ion-slide>
+    <ion-slide [routerLink]="['/shop']" routerLinkActive="router-link-active">
       <div class="portion">
         <img src="assets/images/h-p-s6.jpg" alt="">
       </div>
