--- a/src/app/all-components/home-page-contents/new-shop-ad/new-shop-ad.component.html
+++ b/src/app/all-components/home-page-contents/new-shop-ad/new-shop-ad.component.html
@@ -2,5 +2,5 @@
   <div class="header">
     <h2>new on shop</h2>
   </div>
-  <div class="ad"><img src="assets/images/ne-m-s-ad.jpg" alt=""></div>
+  <div class="ad" [routerLink]="['/shop']" routerLinkActive="router-link-active"><img src="assets/images/ne-m-s-ad.jpg" alt=""></div>
 </div>
