--- a/src/app/all-components/home-page-contents/product-slider/product-slider.component.html
+++ b/src/app/all-components/home-page-contents/product-slider/product-slider.component.html
@@ -1,18 +1,18 @@
 <div class="product_slider">
   <ion-slides pager="false" [options]="slideOpts">
-    <ion-slide>
+    <ion-slide [routerLink]="['/shop']" routerLinkActive="router-link-active">
       <div class="portion">
         <img src="assets/images/h-p-s1.jpg" alt="">
         <ion-button expand="block" fill="clear" shape="round">Shop now</ion-button>
       </div>
     </ion-slide>
-    <ion-slide>
+    <ion-slide [routerLink]="['/shop']" routerLinkActive="router-link-active">
       <div class="portion">
         <img src="assets/images/h-p-s2.jpg" alt="">
         <ion-button expand="block" fill="clear" shape="round">Shop now</ion-button>
       </div>
     </ion-slide>
-    <ion-slide>
+    <ion-slide [routerLink]="['/shop']" routerLinkActive="router-link-active">
       <div class="portion">
         <img src="assets/images/h-p-s3.jpg" alt="">
         <ion-button expand="block" fill="clear" shape="round">Shop now</ion-button>
