--- a/src/app/all-components/home-page-contents/top-brands/wear-details/wear-details.component.html
+++ b/src/app/all-components/home-page-contents/top-brands/wear-details/wear-details.component.html
@@ -26,6 +26,6 @@
     
   </ul>
   <div class="button_back">
-    <ion-button expand="block" fill="clear" shape="round">view all</ion-button>
+    <ion-button expand="block" fill="clear" shape="round" [routerLink]="['/shop']" routerLinkActive="router-link-active">view all</ion-button>
 </div>
 </div>
