--- a/src/app/all-components/shop-details-content/shop-details-content.component.scss
+++ b/src/app/all-components/shop-details-content/shop-details-content.component.scss
@@ -115,8 +115,8 @@ ion-icon{
                             .wrap{
                                 display: inline-block; position: relative; width: 177px;
                             }
-                            ion-input{
-                                width: 68px; height: 68px; margin: auto; border: #909090 2px solid; border-radius: 5px; color: #454444; font-size: 30px; font-weight: 700; padding: 0 !important;
+                            .qty{
+                                width: 68px; height: 68px; line-height: 68px; margin: auto; border: #909090 2px solid; border-radius: 5px; color: #454444; font-size: 30px; font-weight: 700; padding: 0 !important;
                             }
                             ion-icon{
                                 position: absolute; top: 0; bottom: 0; margin: auto;
@@ -530,8 +530,8 @@ ion-icon{
                                 
                                 .wrap{
                                     width: 107px; margin-top: 13px;
-                                    ion-input{
-                                        width: 40px; height: 40px; font-size-adjust: 20px;
+                                    .qty{
+                                        width: 40px; height: 40px; font-size: 15px; line-height: 36px;
                                     }
                                 }
                             }
@@ -804,8 +804,8 @@ ion-icon{
                                 
                                 .wrap{
                                     width: 107px; margin-top: 20px;
-                                    ion-input{
-                                        width: 30px; height: 30px; font-size-adjust: 20px;     border-radius: 3px;
+                                    .qty{
+                                        width: 30px; height: 30px; font-size: 15px; line-height: 26px;     border-radius: 3px;
                                     }
                                 }
                             }
