--- a/src/app/all-pages/shop/shop.page.html
+++ b/src/app/all-pages/shop/shop.page.html
@@ -10,7 +10,7 @@
       </ion-title>
       <ion-buttons slot="end">
         <ul class="right_icon_details">
-          <li><img src="assets/images/search.png" alt=""></li>
+          <li (click)="searchModel()"><img src="assets/images/search.png" alt=""></li>
           <li><img src="assets/images/heart.png" alt=""></li>
           <li>
             <img src="assets/images/bag.png" alt="">
